리사이클러뷰 + listAdapter로 영화 리스트 구현

--- a/android-movie/app/src/main/res/values/strings.xml
+++ b/android-movie/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Movie</string>
+    <string name="movie_poster">poster</string>
+    <string name="btn_reservation">지금 예매</string>
 </resources>
