--- a/android-movie/app/src/main/res/values/strings.xml
+++ b/android-movie/app/src/main/res/values/strings.xml
@@ -1,5 +1,18 @@
 <resources>
     <string name="app_name">Movie</string>
     <string name="movie_poster">poster</string>
+    <string name="ad_image">AdImg</string>
     <string name="btn_reservation">지금 예매</string>
+
+    <string name="title">제목</string>
+    <string name="release_time">상영일</string>
+    <string name="runtime">러닝타임</string>
+    <string name="movieDetail">영화 줄거리</string>
+    <string name="reservation_complete">예매 완료</string>
+
+    <string name="theater_1">주엽 극장</string>
+    <string name="theater_2">정발산 극장</string>
+    <string name="theater_3">백석 극장</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
