refactor : 상영시간, 러닝타임 데이터 레이블 분리 및 데이터 수정
refactor : list_movie.xml과 activity_movie_detail.xml의 상영시간과 러닝타임 레이블을 텍스트뷰로 분리하고 데이터를 수정하였습니다!

--- a/android-movie/app/src/main/res/values/strings.xml
+++ b/android-movie/app/src/main/res/values/strings.xml
@@ -4,11 +4,15 @@
     <string name="ad_image">AdImg</string>
     <string name="btn_reservation">지금 예매</string>
 
-    <string name="title">제목</string>
-    <string name="release_time">상영일</string>
-    <string name="runtime">러닝타임</string>
-    <string name="movieDetail">영화 줄거리</string>
+    <string name="title_date">제목</string>
+    <string name="release_time_date">상영일</string>
+    <string name="runtime_date">러닝타임</string>
+    <string name="movieDetail_date">영화 줄거리</string>
+
     <string name="reservation_complete">예매 완료</string>
+
+    <string name="release_time_label">상영일 : </string>
+    <string name="runtime_label">러닝타임 : </string>
 
     <string name="theater_1">주엽 극장</string>
     <string name="theater_2">정발산 극장</string>
